--- a/FindTrainingVideos/src/main/resources/templates/adminmain.html
+++ b/FindTrainingVideos/src/main/resources/templates/adminmain.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script>
         $(document).ready(function() {
-             fetch('/getDisciplines', {headers: { 'Authorization': `${localStorage.getItem('token')}`,  }})
+             fetch('/general/getDisciplines', {headers: { 'Authorization': `${localStorage.getItem('token')}`,  }})
                  .then((response) => { return response.json();})
                  .then(pdata => {
                      let tr = '';
@@ -19,10 +19,16 @@
                      document.querySelector('#editDisciplinesSelect').innerHTML = tr;
                  });
 
-            fetch('/adminmain/getVideoList', {headers: { 'Authorization': `${localStorage.getItem('token')}`,  }})
+            fetch('/general/getVideoList', {headers: { 'Authorization': `${localStorage.getItem('token')}`,  }})
                 .then((response) => { return response.json();})
-                .then(pdata => {
+                .then(data => {
                     let tr = '';
+                    let pages = '';
+                    let pdata = data.content;
+                    let pagesCount = data.totalPages;
+                    for (let i = 1; i<= pagesCount; i++) {
+                        pages += `<li class="page-item"><a class="page-link" href="javascript:setPage(${i})">${i}</a></li>`;
+                    }
                     pdata.forEach(function (value) {
                         tr += `<tr>
                                    <td>${value.title}</td>
@@ -31,11 +37,12 @@
                                    <td>${value.date.toString()}</td>
                                    <td>${value.url}</td>
                                    <td>${value.description}</td>
-                                   <td><a href="javascript:editVideo(${value.id});"><img src="https://img.icons8.com/ios/50/000000/edit--v1.png" width="20"/></a></td>
+                                   <td><a href="javascript:editVideoForm(${value.id});"><img src="https://img.icons8.com/ios/50/000000/edit--v1.png" width="20"/></a></td>
                                    <td><a href="javascript:deleteVideo(${value.id});"><img src="https://img.icons8.com/windows/32/000000/delete-sign.png" width="20"/></a></td>
                                </tr>`;
                     });
-                    document.querySelector('#table_id tbody:nth-child(2)').innerHTML = tr; //Append the data
+                    document.querySelector('#table_id tbody:nth-child(2)').innerHTML = tr;
+                    document.querySelector('#pagination').innerHTML = pages;
                 }).then().catch(error => {console.log(error);
             });
         });
@@ -47,6 +54,9 @@
         <a class="navbar-brand text-light" href="#">
             <img src="https://img.icons8.com/material-two-tone/24/000000/video.png" width="30" height="30" class="d-inline-block align-top" alt="">
             Training Videos - Admin
+        </a>
+        <a class="navbar-brand text-light" th:href="@{/usermain}">
+            Go to user`s view
         </a>
     </nav>
     <div class="row">
@@ -109,11 +119,16 @@
                     <label for="editvideodescription">Description</label>
                     <input type="text" name="editvideodescription" id="editvideodescription" class="form-control">
                 </div>
-                <input type="submit" value="Edit" class="btn btn-success" onclick="editVideo(id)"/>
+                <a id="editVideoButton" class="btn btn-success">Edit</a>
             </div>
         </div>
         <div class="col container" width="600">
             <h3 style="padding: 10px;">List</h3>
+            <nav aria-label="Pages">
+                <ul class="pagination" id="pagination">
+                    <li class="page-item"><a class="page-link" href="#">1</a></li>
+                </ul>
+            </nav>
             <table class="table" id="table_id">
                 <tbody>
                 <tr class="bg-light">
@@ -193,6 +208,40 @@
                 description: editvideodescription
             })
         });
+    }
+    async function editVideoForm(id) {
+        fetch(`adminmain/getVideo/${id}`,  {method: 'GET', headers: { 'Authorization': `${localStorage.getItem('token')}`}})
+            .then((response) => { return response.json();})
+            .then(data => {
+                document.getElementById("editvideotitle").value = data.title;
+                document.getElementById("editvideotheme").value = data.theme;
+                document.getElementById("editvideoauthor").value = data.author;
+                document.getElementById("editDisciplinesSelect").value = data.disciplineEntity.id;
+                document.getElementById("editvideourl").value = data.url;
+                document.getElementById("editvideodescription").value = data.description;
+                document.getElementById("editVideoButton").href = `javascript:editVideo(${id})`;
+            });
+    }
+    async function setPage(page) {
+        fetch(`/general/getVideoList?page=${page-1}`, {headers: { 'Authorization': `${localStorage.getItem('token')}` }})
+            .then((response) => { return response.json();})
+            .then(data => {
+                let tr = '';
+                let pdata = data.content;
+                pdata.forEach(function (value) {
+                    tr += `<tr>
+                                   <td>${value.title}</td>
+                                   <td>${value.theme}</td>
+                                   <td>${value.author}</td>
+                                   <td>${value.date}</td>
+                                   <td>${value.url}</td>
+                                   <td>${value.description}</td>
+                                   <td><a href="javascript:editVideoForm(${value.id});"><img src="https://img.icons8.com/ios/50/000000/edit--v1.png" width="20"/></a></td>
+                                   <td><a href="javascript:deleteVideo(${value.id});"><img src="https://img.icons8.com/windows/32/000000/delete-sign.png" width="20"/></a></td>
+                               </tr>`;
+                });
+                document.querySelector('#table_id tbody:nth-child(2)').innerHTML = tr;
+            }).then().catch(error => {console.log(error);});
     }
 </script>
 </body>
