--- a/FindTrainingVideos/src/main/resources/templates/login.html
+++ b/FindTrainingVideos/src/main/resources/templates/login.html
@@ -40,22 +40,9 @@
         if (response.status === 200) {
           localStorage.setItem("token", response.headers.get("Authorization"));
           if (login === "pasyagitka") {
-            //document.location.href = "/adminmain";
-            /*  var req = new XMLHttpRequest();
-              req.open('GET', '/adminmain', true); //true means request will be async
-              req.onreadystatechange = function (aEvt) {
-                if (req.readyState == 4) {
-                  if(req.status == 200) {
-                    document.write(req.responseText);
-                  }
-                  else
-                  alert("Error loading page\n");
-                }
-              };
-              req.setRequestHeader('Authorization', response.headers.get("Authorization"));
-              req.send();*/
+            document.location.assign("/adminmain");
           } else {
-           // document.location.href = "/usermain";
+           document.location.assign("/usermain");
           }
       } else {
         document.querySelector("#result").style.color = "#e74c3c";
