email notifications (new video)

--- a/FindTrainingVideos/src/main/resources/templates/adminmain.html
+++ b/FindTrainingVideos/src/main/resources/templates/adminmain.html
@@ -252,6 +252,9 @@
                 document.querySelector('#table_id tbody:nth-child(2)').innerHTML = tr;
             }).then().catch(error => {console.log(error);});
     }
+    async function sendEmail() {
+
+    }
 </script>
 </body>
 </html>
